modify landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,47 @@
+<div class="jumbotron">
+	<div class="container">
+		<h1> Facebook on Rails</h1>
+		<p>Welcome to the App!</p>
+
+		<div class="progress">
+			<div class="progress-bar" style="width: 40%">
+		    	<span class="sr-only">40% Complete (default)</span>
+		  	</div>
+		  	<div class="progress-bar progress-bar-success" style="width: 10%">
+		    	<span class="sr-only">10% Complete (success)</span>
+		  	</div>
+		  	<div class="progress-bar progress-bar-warning" style="width: 10%">
+		    	<span class="sr-only">10% Complete (warning)</span>
+			  </div>
+			  <div class="progress-bar progress-bar-danger" style="width: 10%">
+			    <span class="sr-only">10% Complete (danger)</span>
+			  </div>
+			  <div class="progress-bar progress-bar-info" style="width: 30%">
+			    <span class="sr-only">30% Complete (info)</span>
+			  </div>
+		</div>
+	</div>
+</div>
+
 <div class="container">
-	<h1>Hello world!</h1>
-	<p>Welcome to Facebook on Rails!</p>
+	<div class="row">
+		<div class="col-md-12">
+			<h3>How it works!</h3>
+			<hr>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<h3>Connect with Facebook!</h3>
+			<p>Signup or login to this app with your facebbok account</p>
+		</div>
+		<div class="col-md-4">
+			<h3>Create fun posts!</h3>
+			<p>Start posting cool content. Max 160 characters twitter style</p>
+		</div>
+		<div class="col-md-4">
+			<h3>Share them</h3>
+			<p>Share with your friends on facebbok</p>
+		</div>
+	</div>
 </div>
